개발시 실안드로이드 기기에서 기동을 위한 플러터 안드로이드 내부 버전 업그레이드 및 gitignore 개선 : chore : 안드로이드 빌드 gitignore 추가 https://github.com/TEAM-ROMROM/RomRom-FE/issues/34

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,9 @@ app.*.map.json
 /android/app/release
 /android/app/keystore/key.jks
 
+# 안드로이드 빌드
+/android/app/.cxx/
+
 # 환경변수 ignore
 *.env
 lib/firebase_options.dart
