개발시 실안드로이드 기기에서 기동을 위한 플러터 안드로이드 내부 버전 업그레이드 및 gitignore 개선 : chore : 버전 업그레이드 https://github.com/TEAM-ROMROM/RomRom-FE/issues/34

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,7 +4,6 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
-// 파일 상단 또는 defaultConfig 전에 .env 파일 읽기
 def dotenv = new Properties()
 def envFile = rootProject.file("../.env")
 if (envFile.exists()) {
@@ -50,8 +49,8 @@ android {
     ndkVersion flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     lint {
@@ -59,7 +58,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 
     sourceSets {
