CICD 관리 개선 및 keyjks 추가 : chore : 깃헙 b64 파일 추가 https://github.com/TEAM-ROMROM/RomRom-FE/issues/38

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@ android/Google-Services.json
 ios/Runner/GoogleService-Info.plist
 
 ios/Flutter/Secrets.xcconfig
+
+# key.jks.b64
+/android/app/keystore/key.jks.b64
