--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -17,24 +17,40 @@ jobs:
 
       - name: Create .env file from GitHub Secret
         run: |
-          printf "%s\n" "${{ secrets.ENV }}" > .env
-
-      - name: Check .env file
-        run: ls -la .
+          echo "${{ secrets.ENV_FILE }}" > .env
+          echo ".env file created"
+          ls -la
+          cat .env
 
       - name: Setup Keystore and key.properties
         run: |
           mkdir -p android/app/keystore
-          echo "${{ secrets.KEYSTORE_FILE }}" | base64 -d > android/app/keystore/key.jks
-          echo "storeFile=keystore/key.jks" > android/key.properties
-          echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
-          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
-          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
-
-      - name: Check .env and Keystore (Debug)
-        run: |
-          ls -la .
+          echo "${{ secrets.KEYSTORE_JKS }}" | base64 -d > android/app/keystore/key.jks
+          echo "Keystore file created at android/app/keystore/key.jks"
           ls -la android/app/keystore
+
+          echo "${{ secrets.KEY_PROPERTIES }}" > android/key.properties
+          echo "key.properties created"
+          ls -la android/
+          cat android/key.properties
+
+      - name: Create local.properties with dynamic sdk and flutter paths
+        run: |
+          # 우선 local.properties를 Secrets에서 그대로 생성합니다.
+          echo "${{ secrets.LOCAL_PROPERTIES }}" > android/local.properties
+          # CI 환경 변수에 따른 sdk.dir와 flutter.sdk로 대체합니다.
+          sed -i "s|^sdk.dir=.*|sdk.dir=${ANDROID_HOME}|g" android/local.properties
+          sed -i "s|^flutter.sdk=.*|flutter.sdk=${FLUTTER_HOME}|g" android/local.properties
+          echo "local.properties created with dynamic sdk.dir and flutter.sdk"
+          ls -la android/
+          cat android/local.properties
+
+      - name: Create Google-services.json
+        run: |
+          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > android/Google-services.json
+          echo "Google-services.json created"
+          ls -la android/
+          cat android/Google-services.json
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
@@ -42,6 +58,9 @@ jobs:
           flutter-version: "3.27.3"
           cache: true
           cache-key: flutter-${{ runner.os }}-3.27.3
+        run: |
+          echo "Flutter setup completed"
+          flutter --version
 
       - name: Cache Flutter dependencies
         uses: actions/cache@v4
@@ -49,6 +68,7 @@ jobs:
           path: ~/.pub-cache
           key: ${{ runner.os }}-flutter-pub-${{ hashFiles('**/pubspec.lock') }}
           restore-keys: ${{ runner.os }}-flutter-pub-
+        run: echo "Flutter dependencies cached"
 
       - name: Cache Gradle dependencies
         uses: actions/cache@v4
@@ -59,51 +79,66 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/build.gradle', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-
-      - name: Create local.properties
-        run: |
-          echo "sdk.dir=$ANDROID_HOME" > android/local.properties
-          echo "flutter.sdk=$FLUTTER_HOME" >> android/local.properties
+        run: echo "Gradle dependencies cached"
 
       - name: Install dependencies
-        run: flutter pub get
+        run: |
+          flutter pub get
+          echo "Dependencies installed"
+          ls -la
 
       - name: Setup Gradle
         working-directory: android
         run: |
           chmod +x gradlew
+          echo "Gradle wrapper permissions set"
 
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
           distribution: "temurin"
           java-version: "17"
+        run: |
+          echo "Java setup completed"
+          java -version
 
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
+        run: echo "Android SDK setup completed"
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.4.1"
+        run: |
+          echo "Ruby setup completed"
+          ruby -v
 
       - name: Install Fastlane
-        run: gem install fastlane
+        run: |
+          gem install fastlane
+          echo "Fastlane installed"
+          fastlane --version
 
       - name: Calculate Short Commit Hash
         id: short_hash
-        run: echo "SHORT_COMMIT_HASH=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
+        run: |
+          echo "SHORT_COMMIT_HASH=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
+          echo "Short commit hash: ${{ env.SHORT_COMMIT_HASH }}"
 
       - name: Build APK with Fastlane
         run: |
           cd android
           fastlane build --verbose
           ls -la ../build/app/outputs/flutter-apk/ || true
+          echo "APK built with Fastlane"
 
       - name: Rename and Prepare APK
         run: |
           mkdir -p ./android/app/build/outputs/apk/release/
           mv ./build/app/outputs/flutter-apk/app-release.apk ./android/app/build/outputs/apk/release/romrom-${{ env.SHORT_COMMIT_HASH }}.apk
+          echo "APK renamed to romrom-${{ env.SHORT_COMMIT_HASH }}.apk"
+          ls -la ./android/app/build/outputs/apk/release/
 
       - name: Upload APK as Artifact
         uses: actions/upload-artifact@v4
@@ -111,6 +146,7 @@ jobs:
           name: romrom-apk
           path: ./android/app/build/outputs/apk/release/romrom-${{ env.SHORT_COMMIT_HASH }}.apk
           retention-days: 1
+        run: echo "APK uploaded as artifact"
 
   deploy-android:
     name: Deploy Android APK
@@ -119,29 +155,37 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        run: |
+          echo "Repository checked out for deploy"
+          ls -la
 
       - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y smbclient jq
+          echo "SMB and jq dependencies installed"
 
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
           name: romrom-apk
           path: android/app/build/outputs/
+        run: |
+          echo "Artifacts downloaded"
+          ls -la android/app/build/outputs/
 
       - name: List downloaded structure (Debug)
-        run: ls -alR android/app/build/outputs
+        run: |
+          ls -alR android/app/build/outputs
+          echo "Downloaded structure listed"
 
       - name: Find APK file
         run: |
           APK_FILE=$(find android/app/build/outputs/ -name "*.apk" | head -n 1)
           echo "APK_FILE=$APK_FILE" >> $GITHUB_ENV
-
-          # 경로에서 파일명만 추출
           APK_NAME=$(basename "$APK_FILE")
           echo "APK_NAME=$APK_NAME" >> $GITHUB_ENV
+          echo "APK file found: $APK_FILE"
 
       - name: Upload files to Synology NAS via SMB
         env:
@@ -155,6 +199,7 @@ jobs:
 
           echo "Uploading APK file ${{ env.APK_NAME }} to SMB..."
           smbclient "//$SMB_SERVER/$SMB_SHARE" -p "$SMB_PORT" -U "$SMB_USERNAME%$SMB_PASSWORD" -m SMB3 -d 10 -c "mkdir $SMB_PATH; cd $SMB_PATH; put ${{ env.APK_FILE }} ${{ env.APK_NAME }}"
+          echo "APK uploaded to SMB"
 
       - name: Update romrom-cicd-history.json
         env:
@@ -180,13 +225,13 @@ jobs:
           SMB_SHARE=${{ secrets.WEB_SMB_SHARE_ROOT_DIR }}
           SMB_PATH=${{ secrets.WEB_SMB_PATH }}
 
-          # 기존 JSON 파일 다운로드 (없으면 빈 배열 생성)
           smbclient "//$SMB_SERVER/$SMB_SHARE" -p "$SMB_PORT" -U "$SMB_USERNAME%$SMB_PASSWORD" -m SMB3 -d 10 -c "cd $SMB_PATH; get romrom-cicd-history.json" || echo '{"files": []}' > romrom-cicd-history.json
+          echo "Downloaded or initialized romrom-cicd-history.json"
+          cat romrom-cicd-history.json
 
-          # 새로운 빌드 정보 추가
           jq --argjson new_build "$NEW_BUILD_INFO" '.files += [$new_build]' romrom-cicd-history.json > updated.json
+          echo "Updated romrom-cicd-history.json with new build info"
+          cat updated.json
 
-          # 수정된 JSON 파일 업로드
           smbclient "//$SMB_SERVER/$SMB_SHARE" -p "$SMB_PORT" -U "$SMB_USERNAME%$SMB_PASSWORD" -m SMB3 -d 10 -c "cd $SMB_PATH; put updated.json romrom-cicd-history.json"
-
           echo "Updated romrom-cicd-history.json uploaded to SMB"
