--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -10,11 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Repository 체크아웃 및 디버그용 출력
       - name: Check out repository
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
+      - name: List repository contents
+        run: |
+          echo "Repository checked out"
+          ls -la
+
+      # .env 파일 생성
       - name: Create .env file from GitHub Secret
         run: |
           echo "${{ secrets.ENV_FILE }}" > .env
@@ -22,29 +29,29 @@ jobs:
           ls -la
           cat .env
 
+      # Keystore와 key.properties 설정
       - name: Setup Keystore and key.properties
         run: |
           mkdir -p android/app/keystore
           echo "${{ secrets.KEYSTORE_JKS }}" | base64 -d > android/app/keystore/key.jks
           echo "Keystore file created at android/app/keystore/key.jks"
           ls -la android/app/keystore
-
           echo "${{ secrets.KEY_PROPERTIES }}" > android/key.properties
           echo "key.properties created"
           ls -la android/
           cat android/key.properties
 
+      # local.properties 파일 생성 (CI 변수로 sdk와 flutter 경로 치환)
       - name: Create local.properties with dynamic sdk and flutter paths
         run: |
-          # 우선 local.properties를 Secrets에서 그대로 생성합니다.
           echo "${{ secrets.LOCAL_PROPERTIES }}" > android/local.properties
-          # CI 환경 변수에 따른 sdk.dir와 flutter.sdk로 대체합니다.
           sed -i "s|^sdk.dir=.*|sdk.dir=${ANDROID_HOME}|g" android/local.properties
           sed -i "s|^flutter.sdk=.*|flutter.sdk=${FLUTTER_HOME}|g" android/local.properties
           echo "local.properties created with dynamic sdk.dir and flutter.sdk"
           ls -la android/
           cat android/local.properties
 
+      # Google-services.json 생성
       - name: Create Google-services.json
         run: |
           echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > android/Google-services.json
@@ -52,23 +59,26 @@ jobs:
           ls -la android/
           cat android/Google-services.json
 
+      # Flutter 설정
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.27.3"
           cache: true
           cache-key: flutter-${{ runner.os }}-3.27.3
+
+      - name: Verify Flutter version
         run: |
           echo "Flutter setup completed"
           flutter --version
 
+      # Flutter dependencies 캐시
       - name: Cache Flutter dependencies
         uses: actions/cache@v4
         with:
           path: ~/.pub-cache
           key: ${{ runner.os }}-flutter-pub-${{ hashFiles('**/pubspec.lock') }}
           restore-keys: ${{ runner.os }}-flutter-pub-
-        run: echo "Flutter dependencies cached"
 
       - name: Cache Gradle dependencies
         uses: actions/cache@v4
@@ -79,53 +89,66 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/build.gradle', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-        run: echo "Gradle dependencies cached"
 
+      # 프로젝트 의존성 설치
       - name: Install dependencies
         run: |
           flutter pub get
           echo "Dependencies installed"
           ls -la
 
+      # Gradle 셋업
       - name: Setup Gradle
         working-directory: android
         run: |
           chmod +x gradlew
           echo "Gradle wrapper permissions set"
 
+      # Java 셋업
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
           distribution: "temurin"
           java-version: "17"
+
+      - name: Verify Java version
         run: |
           echo "Java setup completed"
           java -version
 
+      # Android SDK 셋업
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
+
+      - name: Verify Android SDK setup
         run: echo "Android SDK setup completed"
 
+      # Ruby 셋업
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.4.1"
+
+      - name: Verify Ruby version
         run: |
           echo "Ruby setup completed"
           ruby -v
 
+      # Fastlane 설치
       - name: Install Fastlane
         run: |
           gem install fastlane
           echo "Fastlane installed"
           fastlane --version
 
+      # 짧은 커밋 해시 계산
       - name: Calculate Short Commit Hash
         id: short_hash
         run: |
           echo "SHORT_COMMIT_HASH=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
           echo "Short commit hash: ${{ env.SHORT_COMMIT_HASH }}"
 
+      # Fastlane을 이용하여 APK 빌드
       - name: Build APK with Fastlane
         run: |
           cd android
@@ -133,6 +156,7 @@ jobs:
           ls -la ../build/app/outputs/flutter-apk/ || true
           echo "APK built with Fastlane"
 
+      # APK 파일 이름 변경 및 준비
       - name: Rename and Prepare APK
         run: |
           mkdir -p ./android/app/build/outputs/apk/release/
@@ -140,21 +164,24 @@ jobs:
           echo "APK renamed to romrom-${{ env.SHORT_COMMIT_HASH }}.apk"
           ls -la ./android/app/build/outputs/apk/release/
 
+      # APK를 아티팩트로 업로드
       - name: Upload APK as Artifact
         uses: actions/upload-artifact@v4
         with:
           name: romrom-apk
           path: ./android/app/build/outputs/apk/release/romrom-${{ env.SHORT_COMMIT_HASH }}.apk
           retention-days: 1
-        run: echo "APK uploaded as artifact"
 
   deploy-android:
     name: Deploy Android APK
     runs-on: ubuntu-latest
     needs: build-android
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: List repository contents for deploy
         run: |
           echo "Repository checked out for deploy"
           ls -la
@@ -170,9 +197,6 @@ jobs:
         with:
           name: romrom-apk
           path: android/app/build/outputs/
-        run: |
-          echo "Artifacts downloaded"
-          ls -la android/app/build/outputs/
 
       - name: List downloaded structure (Debug)
         run: |
@@ -196,7 +220,6 @@ jobs:
           SMB_PORT=${{ secrets.WEB_SMB_PORT }}
           SMB_SHARE=${{ secrets.WEB_SMB_SHARE_ROOT_DIR }}
           SMB_PATH=${{ secrets.WEB_SMB_PATH }}
-
           echo "Uploading APK file ${{ env.APK_NAME }} to SMB..."
           smbclient "//$SMB_SERVER/$SMB_SHARE" -p "$SMB_PORT" -U "$SMB_USERNAME%$SMB_PASSWORD" -m SMB3 -d 10 -c "mkdir $SMB_PATH; cd $SMB_PATH; put ${{ env.APK_FILE }} ${{ env.APK_NAME }}"
           echo "APK uploaded to SMB"
@@ -211,7 +234,6 @@ jobs:
           FILE_SIZE=$(stat -c%s "${{ env.APK_FILE }}")
           COMMIT_LINK="https://github.com/TEAM-ROMROM/RomRom-FE/commit/${{ github.sha }}"
           FULL_COMMIT_HASH="${{ github.sha }}"
-
           NEW_BUILD_INFO=$(jq -n \
             --arg apk_name "${{ env.APK_NAME }}" \
             --arg file_size "$FILE_SIZE" \
@@ -219,19 +241,15 @@ jobs:
             --arg commit_link "$COMMIT_LINK" \
             --arg full_commit_hash "$FULL_COMMIT_HASH" \
             '{apk_name: $apk_name, file_size: $file_size, build_date: $build_date, commit_link: $commit_link, full_commit_hash: $full_commit_hash}')
-
           SMB_SERVER=${{ secrets.WEB_SMB_SERVER }}
           SMB_PORT=${{ secrets.WEB_SMB_PORT }}
           SMB_SHARE=${{ secrets.WEB_SMB_SHARE_ROOT_DIR }}
           SMB_PATH=${{ secrets.WEB_SMB_PATH }}
-
           smbclient "//$SMB_SERVER/$SMB_SHARE" -p "$SMB_PORT" -U "$SMB_USERNAME%$SMB_PASSWORD" -m SMB3 -d 10 -c "cd $SMB_PATH; get romrom-cicd-history.json" || echo '{"files": []}' > romrom-cicd-history.json
           echo "Downloaded or initialized romrom-cicd-history.json"
           cat romrom-cicd-history.json
-
           jq --argjson new_build "$NEW_BUILD_INFO" '.files += [$new_build]' romrom-cicd-history.json > updated.json
           echo "Updated romrom-cicd-history.json with new build info"
           cat updated.json
-
           smbclient "//$SMB_SERVER/$SMB_SHARE" -p "$SMB_PORT" -U "$SMB_USERNAME%$SMB_PASSWORD" -m SMB3 -d 10 -c "cd $SMB_PATH; put updated.json romrom-cicd-history.json"
           echo "Updated romrom-cicd-history.json uploaded to SMB"
