폴더구조 ENUM MODEL 복수 단수 및 class명 파일명 통일성 개선 필요 : refacotr : 통일성 있게 구현 https://github.com/TEAM-ROMROM/RomRom-FE/issues/44

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 def localProperties = new Properties()
-def localPropertiesFile = rootProject.file('local.properties')
+def localPropertiesFile = rootProject.file('local.properties_stable')
 if (localPropertiesFile.exists()) {
     localPropertiesFile.withReader('UTF-8') { reader ->
         localProperties.load(reader)
