--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   logging: ^1.3.0
   permission_handler: ^11.3.1
   shared_preferences: ^2.5.2
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
@@ -36,7 +37,8 @@ flutter:
 
   assets:
     - .env
-    - assets/
+    - assets/icons/
+    - assets/images/
 
   fonts:
     - family: Pretendard
