--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,13 @@ dependencies:
   permission_handler: ^11.3.1
   shared_preferences: ^2.5.2
   flutter_svg: ^2.0.17
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
