로그인 버튼 정렬 Figma 명세와 다른 문제 : feat : 로그인 화면 icon 추가 https://github.com/TEAM-ROMROM/RomRom-FE/issues/54

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ flutter:
     - assets/images/
 
   fonts:
+    # icons
+    - family: AppIcons
+      fonts:
+        - asset: assets/fonts/AppIcons.ttf
+    # fonts
     - family: Pretendard
       fonts:
         - asset: assets/fonts/pretendard/Pretendard-Thin.otf
