사용자 위치 데이터 저장 api 요청 함수 필요 : chore :  ios/Runner.xcodeproj/project.pbxproj  업데이트 및 Podfile.lock 업데이트 https://github.com/TEAM-ROMROM/RomRom-FE/issues/31

--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,7 @@ lib/firebase_options.dart
 
 # Ignore iOS config files
 android/Google-Services.json
-ios/Runner/GoogleService-Info.plist
+ios/GoogleService-Info.plist
 
 # IOS 빌드
 ios/Flutter/Secrets.xcconfig
