--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,7 @@ lib/firebase_options.dart
 
 # Ignore iOS config files
 android/Google-Services.json
-ios/GoogleService-Info.plist
+ios/Runner/GoogleService-Info.plist
 
 # IOS 빌드
 ios/Flutter/Secrets.xcconfig
