카드 컴포넌트 추가 : feat : NEXON-Lv2-Gothic 글씨체 추가 https://github.com/TEAM-ROMROM/RomRom-FE/issues/79

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,3 +68,15 @@ flutter:
           weight: 800
         - asset: assets/fonts/pretendard/Pretendard-Black.otf
           weight: 900
+
+    # fonts
+    - family: NEXON-Lv2-Gothic
+      fonts:
+        - asset: assets/fonts/pretendard/NEXON-Lv2-Gothic-Light.otf
+          weight: 300
+        - asset: assets/fonts/pretendard/NEXON-Lv2-Gothic.otf
+          weight: 400
+        - asset: assets/fonts/pretendard/NEXON-Lv2-Gothic-Medium.otf
+          weight: 500
+        - asset: assets/fonts/pretendard/NEXON-Lv2-Gothic-Bold.otf
+          weight: 700
